--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ footer{
     background-color: palevioletred;
     color: white;
     padding-top: 80px;
+    height: 600px;
     font-size: 40px;
     text-align: center;
     color: yellow;
